Day06 part1 complete